Fifth wave of refactors based on code analysis: Lots of little stuff like swapping strings in compares, Javadoc comments added ...